--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-  "url": "https://raw.githubusercontent.com/D3F0NC3UR/cosmos-servapps-official/master/servapps/servapps.json"
+  "url": "https://d3f0nc3ur.github.io/cosmos-servapps-official/config.json"
 }
